added build related files

--- a/src/main/webapp/manifest.json
+++ b/src/main/webapp/manifest.json
@@ -8,10 +8,10 @@
   },
   "app": {
     "urls": [
-      "http://vteial.github.io/browserconsole/src/main/webapp/index.html"
+      "http://vteial.github.io/browserconsole/"
     ],
     "launch": {
-      "web_url": "http://vteial.github.io/browserconsole/src/main/webapp/index.html"
+      "web_url": "http://vteial.github.io/browserconsole/"
     }
   }
 }
